--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,9 @@ psycopg2-binary = "^2.9.9"
 sqlalchemy = "^2.0.30"
 alembic = "^1.13.1"
 envparse = "^0.2.0"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+email-validator = "^2.1.1"
+bcrypt = "^4.1.3"
 
 
 [build-system]
