--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,8 @@ envparse = "^0.2.0"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 email-validator = "^2.1.1"
 bcrypt = "^4.1.3"
+python-multipart = "^0.0.9"
+aiofiles = "^23.2.1"
 
 
 [build-system]
