--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ email-validator = "^2.1.1"
 bcrypt = "^4.1.3"
 python-multipart = "^0.0.9"
 aiofiles = "^23.2.1"
+sqladmin = {extras = ["full"], version = "^0.17.0"}
 
 
 [build-system]
