--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ bcrypt = "^4.1.3"
 python-multipart = "^0.0.9"
 aiofiles = "^23.2.1"
 sqladmin = {extras = ["full"], version = "^0.17.0"}
+fastapi-admin = "^1.0.4"
 
 
 [build-system]
