--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "flowbite-react": "^0.9.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
@@ -52,8 +53,7 @@
       "last 1 safari version"
     ]
   },
-  "options": {
-    "allowedHosts": ["localhost", ".localhost"],
-    "proxy": "https://localhost:8000/"
+  "devDependencies": {
+    "http-proxy-middleware": "^3.0.0"
   }
 }
