--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.4",
