--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,22 @@
+# Dockerfile для React приложения
 FROM node:20.11.1-alpine
 
+# Установим переменные окружения
 ENV NODE_ENV=production
 
+# Установим рабочую директорию внутри контейнера
 WORKDIR /usr/src/app
 
-COPY package.json /usr/src/app/
+# Скопируем package.json и установим зависимости
+COPY ./package.json .
 
 RUN npm install
 
+# Скопируем все файлы из проекта в контейнер
 COPY . .
 
-CMD [ "npm", "start" ]
+# Откроем порт для приложения
+EXPOSE 3000
+
+# Команда для запуска приложения
+CMD ["npm", "start"]
