--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -56,7 +56,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://postgres:lolkek123@localhost:5432/postgres
+sqlalchemy.url = postgresql+asyncpg://postgres:lolkek123@db:5432/postgres
 
 
 [post_write_hooks]
