--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,49 @@
 version: "3.7"
+
 services:
   web:
     container_name: "web"
     image: nginx:alpine
     depends_on:
       - app
+      - frontend
     ports:
       - "8082:80"
     volumes:
       - ./conf.d:/etc/nginx/conf.d
     networks:
       - custom
+
   app:
     container_name: "app"
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     image: app
     environment:
-      - DATABASE_URL=postgresql://fastapi:fastapi@db:5432/fastapi
-    build:
-      context: backend
+      - DATABASE_URL=postgresql+asyncpg://postgres:lolkek123@db:5432/postgres
+      - YANDEX_CLIENT_ID=87d92a537bc1422497d64ea52194b134
+      - YANDEX_CLIENT_SECRET=23f1cb0dbd9e44cb929f4233733847b5
+      - YANDEX_REDIRECT_URI=http://localhost:8000/api/auth/yandex/callback
+      - FRONTEND_URL=http://frontend:3000/
     ports:
       - "8000:8000"
     networks:
       - custom
     depends_on:
       - db
+    command: >
+      sh -c "
+        alembic upgrade head &&
+        uvicorn main:app --host 0.0.0.0 --port 8000
+      "
+
   frontend:
     container_name: "frontend"
-    image: frontend
     build:
-      context: frontend
+      context: ./frontend
+      dockerfile: Dockerfile
+    image: frontend
     ports:
       - "3000:3000"
     volumes:
@@ -36,6 +51,7 @@ services:
       - /usr/src/app/node_modules
     networks:
       - custom
+
   db:
     image: postgres:15-alpine
     volumes:
@@ -43,9 +59,9 @@ services:
     expose:
       - 5432
     environment:
-      - POSTGRES_USER=fastapi
-      - POSTGRES_PASSWORD=fastapi
-      - POSTGRES_DB=fastapi
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=lolkek123
+      - POSTGRES_DB=postgres
     networks:
       - custom
 
